add MethodAnalysis-based utilities

--- a/Stability/Project.toml
+++ b/Stability/Project.toml
@@ -4,4 +4,5 @@ authors = ["Artem Pelenitsyn <a.pelenitsyn@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+MethodAnalysis = "85b6ec6f-f7df-4429-9514-a64bcd9ee824"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
