--- a/Stability/Makefile
+++ b/Stability/Makefile
@@ -1,3 +1,5 @@
 .PHONY: test
 test:
-	 julia -e 'import Pkg;Pkg.activate(".");Pkg.test("Stability")'
+	julia -e 'import Pkg;Pkg.activate(".");Pkg.test("Stability")'
+deps:
+	julia -e 'import Pkg;Pkg.add("Revise")'
