--- a/Stability/Project.toml
+++ b/Stability/Project.toml
@@ -4,6 +4,7 @@ authors = ["Artem Pelenitsyn <a.pelenitsyn@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 MethodAnalysis = "85b6ec6f-f7df-4429-9514-a64bcd9ee824"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
