CI: don't annotate, 'cause this mixes up stacktraces

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,5 @@ jobs:
           project: Stability
       - uses: julia-actions/julia-runtest@v1
         with:
-          annotate: true
+          annotate: false
           project: Stability
